Updated pre-existing deep strings to flattter language file structure

--- a/templates/actor/combat-powers.hbs
+++ b/templates/actor/combat-powers.hbs
@@ -2,9 +2,9 @@
 <section class='tab combat-powers {{tab.cssClass}}' data-group='primary' data-tab='combatPowers'>
   <ol class='items-list'>
     <li class='item flexrow items-header'>
-      <div class='item-name'>{{localize 'Name'}}</div>
-      <div class='item-cost'>{{localize 'EVENTIDE_RP_SYSTEM.Item.CombatPower.FIELDS.cost.label'}}</div>
-      <div class='item-usage'>{{localize 'EVENTIDE_RP_SYSTEM.Item.CombatPower.FIELDS.usageInfo.label'}}</div>
+      <div class='item-name'>{{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.Name'}}</div>
+      <div class='item-cost'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</div>
+      <div class='item-usage'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Descriptors.UsageInfo.label'}}</div>
       <div class='item-controls'>
         {{#if @root.editable }}
           <a
