--- a/templates/actor/features.hbs
+++ b/templates/actor/features.hbs
@@ -57,7 +57,7 @@
     <section class='main grid-span-4'>
       <ol class='items-list'>
         <li class='item flexrow items-header'>
-          <div class='item-name'>{{localize 'Name'}}</div>
+          <div class='item-name'>{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Name"}}</div>
           <div class='item-controls'>
             {{#if @root.editable}}
               <a
