--- a/templates/actor/header.hbs
+++ b/templates/actor/header.hbs
@@ -15,7 +15,7 @@
         name='name'
         type='text'
         value='{{actor.name}}'
-        placeholder='Name'
+        placeholder='{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Name"}}'
       />
     </div>
     {{! The grid classes are defined in scss/global/_grid.scss. To use,
@@ -28,7 +28,7 @@
         center all of its child elements content and text. }}
       <div class='resource flex-group-center'>
         <label for='system.resolve.value' class='resource-label'>
-          {{localize 'EVENTIDE_RP_SYSTEM.Actor.base.FIELDS.resolve.value.label'}}
+          {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Resolve.Value.label'}}
         </label>
         <div class='resource-content flexrow flex-center flex-between'>
           <input
@@ -49,7 +49,7 @@
 
       <div class='resource flex-group-center'>
         <label for='system.power.value' class='resource-label'>
-          {{localize 'EVENTIDE_RP_SYSTEM.Actor.base.FIELDS.power.value.label'}}
+          {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Power.Value.label'}}
         </label>
         <div class='resource-content flexrow flex-center flex-between'>
           <input
@@ -71,7 +71,7 @@
       <div class='resource flex-group-center'>
         {{#if (eq actor.type 'character')}}
           <label class='resource-label'>
-            {{localize 'EVENTIDE_RP_SYSTEM.Actor.Character.attributes.level.value.label'}}
+            {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Level.label'}}
           </label>
           <div class='resource-content flexrow flex-center flex-between'>
             <input
@@ -84,7 +84,7 @@
         {{/if}}
         {{#if (eq actor.type 'npc')}}
           <label class='resource-label'>
-            {{localize 'EVENTIDE_RP_SYSTEM.Actor.NPC.FIELDS.cr.label'}} / {{localize 'EVENTIDE_RP_SYSTEM.Actor.NPC.xp.label'}}
+            {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.CR.label'}} / {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.XP.label'}}
           </label>
           <div class='resource-content flexrow flex-center flex-between'>
             <input
