--- a/templates/actor/statuses.hbs
+++ b/templates/actor/statuses.hbs
@@ -2,7 +2,7 @@
 <section class='tab statuses {{tab.cssClass}}' data-group='primary' data-tab='statuses'>
   <ol class='items-list'>
     <li class='item flexrow items-header'>
-      <div class='item-name'>{{localize 'Name'}}</div>
+      <div class='item-name'>{{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.Name'}}</div>
       <div class='item-controls'>
         {{#if @root.editable }}
           <a
