Implemented new css for character sheets to help them handle scrolling better

--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -406,13 +406,36 @@
   display: none;
 }
 
-.eventide-character-sheet {
-  background-image: var(--eventide-rp-system-character-background-color);
-  padding: 5px;
-  margin: -8px;
-  background-attachment: local;
-  height: 100%;
-  overflow: auto;
+.eventide-character-sheet--scrollbars .tab {
+  height: 450px;
+  overflow-y: auto !important;
+  -ms-overflow-style: initial !important;
+  scrollbar-width: thin !important;
+  scrollbar-color: var(--eventide-rp-system-input-focus) transparent !important;
+}
+.eventide-character-sheet--scrollbars .tab::-webkit-scrollbar {
+  width: 6px !important;
+  background-color: transparent !important;
+  display: block !important;
+}
+.eventide-character-sheet--scrollbars .tab::-webkit-scrollbar-thumb {
+  background-color: var(--eventide-rp-system-input-focus) !important;
+  border-radius: 10px !important;
+  border: 1px solid var(--eventide-rp-system-input-bg) !important;
+}
+.eventide-character-sheet--scrollbars .tab::-webkit-scrollbar-thumb:hover {
+  background-color: var(--eventide-rp-system-primary-button-hover) !important;
+}
+.eventide-character-sheet--scrollbars .tab::-webkit-scrollbar-track {
+  background-color: transparent !important;
+  margin: 0 !important;
+}
+.eventide-character-sheet--scrollbars .tab section.main, .eventide-character-sheet--scrollbars .tab aside.sidebar, .eventide-character-sheet--scrollbars .tab .items-list {
+  overflow: visible !important;
+  max-height: none !important;
+}
+.eventide-character-sheet--scrollbars .tab.features::-webkit-scrollbar {
+  display: block !important;
 }
 
 .eventide-character-sheet input {
